<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.hhu</groupId>
  <artifactId>stateofstructure</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>stateofstructure</name>

<properties>
  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  <maven.compiler.release>17</maven.compiler.release>
</properties>

  <dependencies>


  <dependency>
    <!-- Libary for visualization of Datastructures, Lightweight Java Visualizer-->
    <groupId>org.atp-fivt</groupId>
    <artifactId>ljv</artifactId>
    <version>1.03</version>
  </dependency>



    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
  <plugins>
<plugin>
  <groupId>org.codehaus.mojo</groupId>
  <artifactId>exec-maven-plugin</artifactId>
  <version>3.1.0</version>

  <configuration>
    <mainClass>com.hhu.App</mainClass>

    <!-- JVM-Argumente als Liste (sauber) -->
    <jvmArgs>
      <jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
      <jvmArg>--add-opens=java.base/java.util=ALL-UNNAMED</jvmArg>
    </jvmArgs>

    <!-- fork ist nötig, damit jvmArgs angewandt werden -->
    <fork>true</fork>
  </configuration>

  <executions>
    <execution>
      <id>run-app</id>
      <goals>
        <goal>java</goal>
      </goals>
    </execution>
  </executions>
</plugin>

<plugin>
  <groupId>org.apache.maven.plugins</groupId>
  <artifactId>maven-shade-plugin</artifactId>
  <version>3.5.0</version>
  <executions>
    <execution>
      <phase>package</phase>
      <goals>
        <goal>shade</goal>
      </goals>
      <configuration>
        <transformers>
          <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
            <mainClass>com.hhu.App</mainClass>
          </transformer>
        </transformers>
      </configuration>
    </execution>
  </executions>
</plugin>


  </plugins>
</build>
</project>
